# go-libopus

./: README.md  go.mod  go.sum  opus_test.go
example/1khz_enc_dec/: OGG.md  OGG_FILE.md  README.md  go.mod  main.go
example/1khz_enc_dec_c/: CMakeLists.txt  main.cpp
ogg/: ogg.go  ogg.lib  ogg_test.go
opus/: opus.go  opus.lib  opus_test.go
